[package]
name = "rustguard"
version = "0.1.0"
edition = "2021"
description = "A minimalist user-mode application firewall written in Rust that filters outgoing connections based on customizable rules."

[dependencies]
pnet = "0.33.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7.3"
log = "0.4.19"
simplelog = "0.12.1"
chrono = "0.4.26"
clap = { version = "4.3.11", features = ["derive"] }
anyhow = "1.0.71"
ipnetwork = "0.20.0"